--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,6 +3,10 @@
   "name": "Create React App Sample",
   "icons": [
     {
+      "src": "logo.png",
+      "type": "image/png"
+    },
+    {
       "src": "favicon.ico",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
