--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-router-dom": "^6.4.0",
     "react-scripts": "^5.0.1",
     "scripts": "^0.1.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "type": "module"
   },
   "scripts": {
     "start": "react-scripts start",
