--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-scripts": "^5.0.1",
     "reactour": "^1.18.7",
     "scripts": "^0.1.0",
+    "styled-components": "^4.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
