--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
     "nodemailer": "^6.8.0",
     "npm": "^8.19.2",
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
+    "react-draggable": "^4.4.5",
     "react-router-dom": "^6.4.0",
     "react-scripts": "^5.0.1",
     "scripts": "^0.1.0",
+    "styled-components": "^5.3.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
