set up google functions for emailling system

--- a/firebase.json
+++ b/firebase.json
@@ -15,5 +15,13 @@
         "destination": "/index.html"
       }
     ]
+  },
+  "functions": {
+    "ignore": [
+      "node_modules",
+      ".git",
+      "firebase-debug.log",
+      "firebase-debug.*.log"
+    ]
   }
 }
